# marketplace-review-monitor

./: .gitignore  README.md  pyproject.toml
.github/workflows/: manual-monitor.yml  tmp-chinese-vin-open-sources.yml  tmp-drive2-vin-audit.yml
config/: targets.yml
launcher/: INSTALL_DESKTOP_SHORTCUT.cmd  INSTALL_FROM_GITHUB.cmd  INSTALL_FROM_GITHUB.ps1  README.md  index.html  install_desktop_shortcut.ps1  server.py  start_launcher.ps1
scripts/: chinese_vin_open_sources.py  drive2_vin_audit.py  drive2_vin_audit_fast.py
src/review_monitor/: analysis.py  cli.py  config.py  models.py  report.py  storage.py  utils.py
src/review_monitor/collectors/: __init__.py  base.py  import_file.py  public_browser.py
