[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "marketplace-review-monitor"
version = "0.1.0"
description = "Wildberries and Ozon public review monitoring by brand and seller"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0,<7",
  "openpyxl>=3.1,<4",
  "python-dateutil>=2.9,<3",
  "playwright>=1.48,<2"
]

[project.optional-dependencies]
dev = ["pytest>=8,<9", "ruff>=0.6,<1"]

[project.scripts]
review-monitor = "review_monitor.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
